tests/ui/coherence/coherence-overlap-with-regions.stderr
error[E0119]: conflicting implementations of trait `Bar` for type `&_`
  --> $DIR/coherence-overlap-with-regions.rs:20:1
   |
LL | impl<T: Foo> Bar for T {}
   | ---------------------- first implementation here
LL | impl<T> Bar for &T where T: 'static {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `&_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
